# koretex-agent

./: .gitignore  README.md  pyproject.toml
docs/: NEXT-STEPS.md  benchmarks.md  model-eval.md  phase0-findings.md  phase1-findings.md  seeker-gtm.md
install/: README.md  install.sh
koretex_agent/: __init__.py  artifacts.py  budget.py  cli.py  client.py  concierge.py  consent.py  embeddings.py  export.py  mission.py  plan_lint.py  schemas.py  scrub.py  search.py  session.py  skills.py  tiers.py  tools.py  training.py  trajectory.py
koretex_agent/profiles/: __init__.py  concierge.md  orchestrator.md  scrutiny.md  skill-synthesizer.md  validator.md  worker.md
phase0/: run-mission-35b.sh
phase0/mission-35b/: README.md  cli.py
phase0/mission-35b/.mission/: state.json
phase0/mission-35b/tests/: test_cli.py
phase0/mission-live/: cli.py
phase0/mission-live/.mission/: state.json
phase0/mission-live/tests/data/: missing.csv  quoted.csv  simple.csv
scripts/: ab-elision.py  bench-mission.sh  bench-report.py  curate-skills.py  export-datasets.py  harvest-trajectories.py  live-escalation-mission.py  probe-cutoff-validator.py  probe-escalation.py  synthesize-skill.py  worker-probe.py
tests/: test_artifacts.py  test_budgets.py  test_client_retry.py  test_concierge.py  test_embeddings.py  test_escalation.py  test_kernel.py  test_mission.py  test_plan_lint.py  test_scrub_consent.py  test_search.py  test_session_elision.py  test_skill_curator.py  test_skill_wiring.py  test_skills.py  test_tiers.py  test_training.py  test_validator_reliability.py
